# mslookup-ref

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  mkdocs.yml  pyproject.toml  requirements.txt  run.py
.agent/rules/: diretrizes-do-agente.md
.agents/rules/: diretrizes-do-agente.md
.antigravitycli/: 90743b71-1527-4745-b661-8bf3712d91b8.json
docs/api/errors/: error_handler.md
docs/api/logging/: formatter.md  logger_handler.md
docs/api/validators/: medicine_finder_validator.md  medicine_register_validator.md
init/: schema.sql
mslookup_ref/data/interfaces/: laboratories_repository.py  medicines_repository.py
mslookup_ref/data/use_cases/: laboratory_finder.py  laboratory_register.py  medicine_finder.py  medicine_register.py
mslookup_ref/domain/models/: laboratories.py  medicines.py
mslookup_ref/domain/use_cases/: laboratory_finder.py  laboratory_register.py  medicine_register.py
mslookup_ref/errors/: error_handler.py
mslookup_ref/errors/types/: http_bad_request.py  http_unprocessable_entity.py
mslookup_ref/infra/log/: logger.py
mslookup_ref/logging/: __init__.py  formatter.py  logger_handler.py
mslookup_ref/main/adapters/: request_adapter.py
mslookup_ref/main/composers/: laboratory_finder_composer.py  laboratory_register_composer.py  medicine_finder_composer.py  medicine_register_composer.py
mslookup_ref/main/routes/: routes.py
mslookup_ref/main/server/: server.py
mslookup_ref/presentation/controllers/: laboratory_finder_controller.py  laboratory_register_controller.py  medicine_finder_controller.py  medicine_register_controller.py
mslookup_ref/presentation/interfaces/: controller_interface.py
mslookup_ref/validators/: laboratory_finder_validator.py  laboratory_register_validator.py  medicine_finder_validator.py  medicine_register_validator.py
src/: main.py
src/api/: drug_routes.py  drug_schemas.py
src/api/errors/: error_handler.py
src/core/errors/: domain_errors.py  error_handler.py
src/core/models/: drugs.py
src/data/interfaces/: drugs_repository_interface.py  medicines_repository.py
src/data/use_cases/: drug_finder.py  medicine_finder.py  (+1 more)
src/errors/: error_handler.py
src/ingest/: downloader.py  ingest_anvisa.py  loader.py  normalizer.py  validator.py
src/logging/: __init__.py  formatter.py  logger_handler.py
src/repositories/: drugs_repository.py
src/schemas/: drug_schemas.py
src/services/: drug_finder_service.py
src/tasks/: anvisa_ingestion.py  downloader.py  loader.py  validator.py
src/utils/: logging.py
src/validators/: drug_finder_validator.py  medicine_finder_validator.py  medicine_register_validator.py
tests/: conftest.py
tests/ingest/: downloader_test.py  loader_test.py  normalizer_test.py  validator_test.py
tests/integration/: routes_test.py
tests/validators/: drug_finder_validator_test.py  laboratory_finder_validator_test.py  laboratory_register_validator_test.py  medicine_finder_validator_test.py  medicine_register_validator_test.py
(+91 files in other folders)
