[tool.poetry]
name = "mslookup-ref"
version = "0.1.0"
description = ""
authors = ["Murilo Seidenstucker <murilocampos.004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
isort = "^5.13.2"
taskipy = "^1.14.1"
black = "^24.10.0"
pylint = "^3.3.3"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.50"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=mslookup_ref -vv"
post_test = "coverage html"