[project]
name = "mslookup-ref"
version = "0.1.0"
description = ""
authors = [
    { name = "Murilo Seidenstucker", email = "murilocampos.004@gmail.com" }
]
readme = "README.md"
requires-python = "^3.12"
dependencies = ["sqlalchemy (>=2.0.38,<3.0.0)", "certifi (>=2025.11.12,<2026.0.0)", "fastapi[standard] (>=0.128.0,<0.129.0)", "requests (>=2.32.5,<3.0.0)", "pydantic (>=2.13.4,<3.0.0)", "python-dotenv (>=1.2.2,<2.0.0)"]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
isort = "^5.13.2"
taskipy = "^1.14.1"
black = "^24.10.0"
pylint = "^3.3.3"
pre-commit = "^4.1.0"
pytest-mock = "^3.15.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"
